platform/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  hostnames:
    - argocd.larswenda.org
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
